# open-notebook-api

./: Dockerfile.api  Dockerfile.mcp  MCP_INTEGRATION_FIXES.md  MCP_INTEGRATION_SUMMARY.md  api_main.py  complete_fix.py  create_debug_tools.sh  debug_mcp_imports.py  dependency_fix_documentation.ipynb  docker-compose.override.yml  docker-compose.yml  mcp_integration_plan.md  on_run.sh  open_notebook_cli.py  open_notebook_cli_documentation.ipynb  open_notebook_container_setup.py  open_notebook_wrapper.py  open_notebook_wrapper.sh  open_notebook_wrapper_documentation.ipynb  open_notebook_wrapper_enhanced.py  pyproject.toml  quick_fix_documentation.ipynb  requirements-api.txt  requirements-cli.txt  run_mcp_test.sh  sequential_thinking_mcp_issue.ipynb  setup.py  start_services.sh  supervisord.mcp.conf  test_mcp_integration.sh
docs/: API_REFERENCE.md  CLI_API_DOCUMENTATION.md  MCP_CLI_INTEGRATION.md  argparse_to_schema_plan.md  mcp_server_scaffolding_plan.md  tool_registry_implementation_plan.md
examples/: apply_transform_to_existing.sh  batch_transformation_example.sh  generate_schema_examples.py
examples/api-calls/: error_case_examples.sh  get_all_tools.sh  get_single_tool.sh  healthcheck.sh  postman_collection.json
examples/schemas/: add-url-source_schema.json  list-notebooks_schema.json  text-search_schema.json
open_notebook/: __init__.py  tool_reflector.py  tool_registry.py
open_notebook_mcp/: Dockerfile  main.py  pyproject.toml
tests/: test_api_cli.py  test_tool_reflection.py
